--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">NicMessenger</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="password">Password</string>
+    <string name="se_connecter">Se connecter</string>
+    <string name="mot_de_passe_oubli">Mot de passe oublié?</string>
+    <string name="email">Email</string>
+    <string name="email_mot_de_passe_oublie">Le courriel de rénitialisation du mot de passe à été envoyé</string>
+    <string name="une_erreur_r_seau_c_est_produite">Une erreur réseau c\'est produite</string>
+    <string name="identifiant_invalide">Email ou mot de passe invalide</string>
 </resources>
