--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="une_erreur_r_seau_c_est_produite">Une erreur réseau c\'est produite</string>
     <string name="identifiant_invalide">Email ou mot de passe invalide</string>
     <string name="confirmer">Confirmer</string>
+    <string name="annuler">Annuler</string>
 </resources>
