--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="identifiant_invalide">Email ou mot de passe invalide</string>
     <string name="confirmer">Confirmer</string>
     <string name="annuler">Annuler</string>
+    <string name="mes_conversations">Mes Conversations</string>
 </resources>
