--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="pas_de_conversations">Vous n\'avez pas encore de conversations</string>
     <string name="pas_de_notifications">Vous n\'avez pas de nouvelles notifications</string>
     <string name="pas_de_demandes">Vous n\'avez pas de nouvelles demandes</string>
+    <string name="home_button">Bouton d\'accueil</string>
 </resources>
