--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -38,4 +38,5 @@
     <string name="pas_de_notifications">You have no new notifications</string>
     <string name="pas_de_demandes">You have no new friend requests</string>
     <string name="home_button">Home button</string>
+    <string name="changer_votre_banni_re">Change your banner</string>
 </resources>
