--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,8 @@
     <string name="pas_de_demandes">Vous n\'avez pas de nouvelles demandes</string>
     <string name="home_button">Bouton d\'accueil</string>
     <string name="changer_votre_banni_re">Changer votre bannière</string>
+    <string name="s_inscrire">S\'inscrire</string>
+    <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
+    <string name="nom_complet">Nom Complet</string>
+    <string name="pas_de_compte_inscrivez_vous">Pas de compte? inscrivez-vous</string>
 </resources>
