--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -43,4 +43,11 @@
     <string name="confirmer_le_mot_de_passe">Confirm Your Password</string>
     <string name="nom_complet">Complete Name</string>
     <string name="pas_de_compte_inscrivez_vous">No account? register now</string>
+    <string name="short_mot_de_passe_invalide">Invalid Password</string>
+    <string name="email_invalide">Invalid Email</string>
+    <string name="mot_de_passe_invalide">Invalid password: 8 characters, one uppercase, one number, and one special character are required</string>
+    <string name="confirm_pas_egal">The passwords are not the same</string>
+    <string name="nom_vide">The name cant be empty</string>
+    <string name="inscription_reussi">Your registration was successful, you can now login</string>
+    <string name="email_exist">This email address is already in use by another user</string>
 </resources>
